gitops/exprimental/security/falco/falcosidekick-ui-http-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: falcosidekick-ui
  namespace: falco
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - falcosidekick.nulcell.com
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - group: ""
          kind: Service
          name: falco-falcosidekick-ui
          port: 2802
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: falcosidekick-ui-http-redirect
  namespace: falco
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
      sectionName: http
  hostnames:
    - falcosidekick.nulcell.com
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
